# ursa

./: .gitignore  COPYRIGHT  Dockerfile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  pypi.yml  site.yml
configs/: README.md  example.yaml
docs/: Metrics-Guide.md  Plan-Execute-Runner-Checkpointing-Guide.md  arxiv_agent.md  combining_arxiv_and_execution.md  combining_arxiv_and_execution_neutronStar.md  dsi_agent.md  execution_agent.md  getting-llm-history.md  git_go_agent.md  humanInTheLoop_example.md  hypothesizer_agent.md  index.md  lammps_agent.md  planning_agent.md  web_search_agent.md
docs/api_reference/: agents.md  prompt_library.md  tools.md  util.md
examples/combine_agents_examples/: agent_graph.py
examples/hitl_examples/: hitl_basic.py
examples/mcp_examples/: README.md  sqlite_mcp.py  test_sqlite_mcp.py
examples/runai_examples/: README.md  exec_container.sh  isolation_summary.sh  sleep_inf.sh  template.example.env
examples/single_agent_examples/acquisition_examples/: acquistion_agents.py
examples/single_agent_examples/arxiv_agent/: high_entropy_alloy_papers.py  neutron_star_radius.py
examples/single_agent_examples/dsi_agent/: README.md  agent_example.py  dsi_explorer.ipynb  requirements.txt
examples/single_agent_examples/execution_agent/: bayesian_optimization.py  bayesian_optimization_continue.py  bayesian_optimization_ollama.py  integer_sum.py
examples/single_agent_examples/git_go_agent/: git_go_agent_example.py
examples/single_agent_examples/hypothesizer_agent/: README.md
examples/single_agent_examples/materials_project_agent/: mpa_example.py
examples/single_agent_examples/optimization_agent/: dataPlot.m  example_ACOPF.py  example_CartPole.py  example_GasFlow.py  example_KKT.py  example_VA.py  example_VP.py  example_optimization_fromFile.py  example_testing.py  h5toFracMetricsAsses 1.py
examples/single_agent_examples/rag_agent/: rag_agent_example.py
examples/single_agent_examples/simulation_agent/: dcopf_simulator_case.py  dcopf_simulator_checkpoint.py  pietools_test.py
examples/single_agent_examples/symlink_fruit_sales/: fruit_sales_and_symlink.py
examples/single_agent_examples/websearch_agent/: ten_vowel_city.py
examples/two_agent_examples/arxiv_execute/: materials_extract_data_to_ML.py  materials_extract_data_to_plot.py  neutron_star_extract_data_to_plot.py
examples/two_agent_examples/lammps_execute/: EOS_of_Cu.py  elastic_template.txt  eos_template.txt  stiffness_tensor_of_hea.py
examples/two_agent_examples/plan_execute/: city_10_vowels.py  example_from_yaml.yaml  example_multi_repo.yaml  fibonacci_finder.py  openchami_boot_docs_example.yaml  pi_multiple_ways.yaml  plan_execute_from_yaml.py  plan_execute_multi_repo.py  quantum_Rabi_QuTiP.py  scrabble.py  simulator_use_dcopf.py  ubc_STAT545A_hw02.yaml
scripts/: metrics_cli.py
src/ursa/: __init__.py
src/ursa/agents/: __init__.py  acquisition_agents.py  arxiv_agent.py  base.py  chat_agent.py  code_review_agent.py  dsi_agent.py  execution_agent.py  git_agent.py  git_go_agent.py  hypothesizer_agent.py  lammps_agent.py  mp_agent.py  opt_lammps_agent.py  optimization_agent.py  planning_agent.py  rag_agent.py  recall_agent.py  websearch_agent.py
src/ursa/cli/: __init__.py  config.py  hitl.py  hitl_api.py
src/ursa/observability/: metrics_charts.py  metrics_io.py  metrics_session.py  pricing.json  pricing.py  timing.py
src/ursa/prompt_library/: chatter_prompts.py  execution_prompts.py  git_go_prompts.py  git_prompts.py  go_prompts.py  literature_prompts.py  optimization_prompts.py  safety_prompts.py  simulator_prompts.py
src/ursa/tools/: __init__.py  dsi_search_tools.py  feasibility_checker.py  feasibility_tools.py  fm_base_tool.py  git_tools.py  go_tools.py  lammps_tool.py  optimality_tools.py  read_file_tool.py  read_image_tool.py  run_command_stream_tool.py  run_command_tool.py  search_tools.py  write_code.py  write_code_tool.py
src/ursa/util/: __init__.py  diff_renderer.py  github_research.py  has_optional_dep_group.py  helperFunctions.py  http.py  logo_generator.py  mcp.py  memory_logger.py  optSchema.py  optimization_schema.py  parse.py  plan_execute_utils.py  plan_renderer.py  traced.py  types.py
src/ursa/workflows/: __init__.py  base_workflow.py  planning_execution_workflow.py  simulation_use_workflow.py
src/ursa_dashboard/: __init__.py  adapters.py  api_models.py  app.py  artifacts.py  cli.py  demo_agents.py  events.py  main.py  models.py  registry.py  retention.py  run_manager.py  security.py  sessions.py  settings.py  storage.py  ulid.py  worker_main.py
test_development/lammps_agent/: lammps_agent.py
test_development/optimization_agent/: optimization_agent.py
tests/: conftest.py  test_base_interface.py
tests/agents/test_arxiv_agent/: test_arxiv_agent.py
tests/agents/test_arxiv_agent_legacy/: test_arxiv_agent_legacy.py
tests/agents/test_base/: test_base.py
tests/agents/test_chat_agent/: test_chat_agent.py
tests/agents/test_code_review_agent/: _test_code_review_agent.py
tests/agents/test_execution_agent/: test_execution_agent.py
tests/agents/test_git_go_agent/: test_git_go_agent.py  test_go_tools.py
tests/agents/test_hypothesizer_agent/: test_hypothesizer_agent.py
tests/agents/test_mp_agent/: test_mp_agent.py
tests/agents/test_multiagent/: test_multiagent.py
tests/agents/test_optimization_agent/: test_optimization_agent.py
tests/agents/test_osti_agent/: test_osti_agent.py
tests/agents/test_planning_agent/: test_planning_agent.py
tests/agents/test_rag_agent/: test_rag_agent.py
tests/agents/test_recall_agent/: test_recall_agent.py
tests/agents/test_websearch_agent/: test_websearch_agent.py
tests/cli/: test_cli_parser.py  test_config.py  test_hitl.py
tests/tools/: dummy_mcp_server.py  test_fm_base_tool.py  test_read_file_tool.py  test_read_file_tool_ocr.py  test_read_file_tool_ocr_integration.py  test_run_command_tool.py  test_write_code_tool.py  test_write_code_tool_validation.py  utils.py
tests/util/: test_mcp.py  test_traced.py
(+22 files in other folders)
